# LittleLemonAPI_v2

./: .gitignore  .pre-commit-config.yaml  .pylintrc  docker-compose.yaml  pyproject.toml  pyvenv.cfg  redis.conf  requirements.txt
.data/: SeedScript.sql  little-lemon.json  little_lemon_data.sql
LittleLemonAPI/: .env.vault  data.json  db.sqlite3  manage.py
LittleLemonAPI/API/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
LittleLemonAPI/API/migrations/: 0001_initial.py  0002_alter_menuitems_category_delete_category.py  0002_alter_menuitems_options_remove_cart_price.py  0002_remove_category_slug_alter_category_title.py  0003_alter_cart_menuitems_alter_orderitem_order.py  0003_alter_littlelemoner_home_address_and_more.py  0003_alter_menuitems_options_remove_orderitem_price_and_more.py  0004_alter_cart_unit_price.py  0004_order_price.py  0005_orderitem_price.py
LittleLemonAPI/LittleLemonAPI/: log_config.ini  settings.py  urls.py  views.py
LittleLemonAPI/static/js/: script.js
LittleLemonAPI/templates/: welcome.html
