[tool.poetry]
name = "littlelemonapi-v2"
version = "0.1.0"
description = ""
authors = ["Terry Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
readme = "README.md"
packages = [{ include = "littlelemonapi_v2" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
pendulum = "^2.1.2"
djangorestframework-csv = "^2.1.1"
djoser = "^2.2.0"
django-guardian = "^2.4.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
pylint = "^2.17.4"
black = "^23.3.0"
django-seed = "^0.3.1"
icecream = "^2.1.3"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
